@@ -8,6 +8,7 @@ cpiobin:	@CPIOBIN@
 gzipbin:	@GZIPBIN@
 defaultdocdir:  @prefix@/doc
 fixperms:	@FIXPERMS@
+rpmfilename:    %{ARCH}/%{NAME}-%{VERSION}-%{RELEASE}.%{ARCH}.rpm
 
 #############################################################
 
